--- a/app.ipynb
+++ b/app.ipynb
@@ -7,7 +7,7 @@
     "# Voila Web App\n",
     "## A website built out of a Jupyter notebook using Voila\n",
     "\n",
-    "# Can You Imagine the Possibilities, Victor!?"
+    "# GETTING THIS TO WORK HAS BEEN A MAJOR PAIN!"
    ]
   },
   {
