Changed message again

--- a/app.ipynb
+++ b/app.ipynb
@@ -7,18 +7,18 @@
     "# Voila Web App\n",
     "## A website built out of a Jupyter notebook using Voila\n",
     "\n",
-    "# GETTING THIS TO WORK HAS BEEN A MAJOR PAIN!"
+    "## It Works!! And it wasn't easy! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f8260b221424e608e81690512dbe8a7",
+       "model_id": "9df1b7f1fd8743b59654ccef6963c36f",
        "version_major": 2,
        "version_minor": 0
       },
